--- a/example/index.html
+++ b/example/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>gren-html-autodropdown example</title>
 
-<link rel="stylesheet" href="example.css">
+<link rel="stylesheet" href="autodropdown.css">
+<link rel="stylesheet" href="main.css">
 </head>
 
 <body>
